src/index.css
.Navcontainer {
  display: flex;
  align-items: center;
  border: 1px solid hsl(0, 5%, 70%);
  width: auto;
  padding: 20px;
  background-color: rgba(245, 245, 245, 0.548);
  color: rgb(140, 38, 17);
  justify-content: space-between;
  text-decoration: none;
}

.icon {
  height: 50px;
  width: 50px;
  margin-right: 10px;
}

h1 {
  margin-right: auto;
}

.navbar {
  font-size: x-large;
  font-style: italic;
  color: rgb(140, 38, 17);
}

.Iconcontainer {
  display: flex;
  align-items: center;
}

.ButtonsDiv {
  display: flex;
  justify-content: space-between;
}

.nav {
  display: flex;
  justify-content: center;
}

.Navbutton {
  margin-left: 10px;
}

.app {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 20px;
  background-color:black;
  
}
.details {
  display: flex;
  background-color: black; 
  padding: 40px;
  border-radius: 10px;
}

.image-container {
  flex: 1;
  position: relative;

}

.image {
  width: 200%;
  height: 10px;
 border-radius: 20px;
 max-width: 2000px;
  transition: transform 0.3s ease;
}

.image:hover {
  transform: scale(1.2);
}

.image-description {
  position: absolute;
  bottom: 100px;
  left: 5px;
  background-color: black; 
  color: #fff;
  padding: 0.5px;
  border-radius: 7px;
}
.heading{
  font-size: 25px;
}

.info-container {
  flex: 1;
  padding-left: 40px; 
}

.info {
  background-color: black; 
  padding: 20px;
  border-radius: 10px;
}

.txt {
  color: transparent; 
  font-size: 24px; 
  animation: glowAppear 5s infinite; 
}

@keyframes glowAppear {
  0% {
    text-shadow: 0 0 10px green; 
  }
  50% {
    text-shadow: 0 0 5px green; 
  }
  100% {
    color: green; 
    text-shadow: 0 0 5px green; 
  }
}


.content {
  display: flex;
  justify-content: space-between;
  color: whitesmoke;
}

.subheading {
  font-size: 24px;
  font-weight: bold;
  margin-bottom: 10px;
}

ul,
ol {
  margin: 0;
  padding-left: 20px;
}

.ingredients,
.method {
  flex: 0 0 48%; 
}

.recipe-card {
  border: 1px solid #ccc;
  border-radius: 8px;
  padding: 20px;
  text-align: center;
  height: 450px;
  display: flex;
  flex-direction: column;
  background-color:rgba(245, 245, 245, 0.906);

}
.btn-primary{
  background-color:green;
  size: 60px;
}

.recipe-card img {
  height: 250px; 
  object-fit: cover;
  width: 100%;
  }
.recipe-card:hover {
  transform: translateY(-10px);
  box-shadow: 0 4px 8px rgba(182, 53, 53, 0.1);
}
.recipe-card button:hover {
  background-color: #101820;
}

.recipe-card h2 {
  margin: 5px 0;
}

.recipe-card p {
  font-style: italic;
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  
}
.image {
  width: 350px;
  height: 300px;
}
.txt{
  font-size: 40px;
  font-weight: bolder;
  font-family: Georgia, 'Times New Roman', Times, serif;
  
}
.Dev{
  padding: 20px;
}
.button1 {
  background-color: rgb(107, 75, 68);
}

.sort-bar label {
  margin-right: 15px;
}
.goback{
  padding: 0px;
  margin-bottom: 10px;
}

.sort-bar select {
  padding: 5px;
  border: 5px solid brown;
  border-radius: 15px;
}
.sort-bar{
  font-family: Georgia, 'Times New Roman', Times, serif;
  font-weight: bold;
}
.spacing {
  display: flex;
  justify-content: space-between;
  align-items: last baseline;
}
.navbar.bg-body-tertiary {
  background-color: #a6c2a5;
  color: #447537;
  padding: 2px;
  display: flex;
  justify-content: center;
}

